# minimal-terminal-app

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  GOAL.md  README.md  TODO.md
crates/terminal-app/: Cargo.toml
crates/terminal-app/src/: composition.rs  input.rs  logging.rs  main.rs  mouse.rs  paste.rs  pty.rs  selection.rs  smoke.rs  terminal_buffer.rs  terminal_view.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: cell.rs  cursor.rs  grid.rs  lib.rs  parser.rs  state.rs  style.rs
crates/terminal-core/tests/: compatibility.rs  fixtures.rs  tui_replay.rs
crates/terminal-core/tests/fixtures/tui/: less_open_close.ansi  top_minimal.ansi  vim_minimal.ansi  vttest_menu.ansi
docs/: LOGGING.md
docs/compatibility/: app-readiness.md  csi.md  known-gaps.md  matrix.md  regression-runner.md  smoke-tests.md  standards-and-tests.md  test-strategy.md
docs/phases/: phase001.md  phase002.md  phase003.md  phase004.md  phase005.md  phase006.md  phase007.md  phase008.md  phase009.md  phase010.md  phase011.md  phase012.md  phase013.md  phase014.md  phase015.md  phase016.md  phase017.md  phase018.md  phase019.md  phase020.md  phase021.md  phase022.md  phase023.md  phase024.md  phase025.md  phase026.md  phase027.md  phase028.md  phase029.md  phase030.md  phase031.md  phase032.md  phase033.md  phase034.md  phase035.md  phase036.md  phase037.md  phase038.md  phase039.md  phase040.md  (+121 more)
scripts/: bundle-macos-app.sh  check-compatibility-docs.sh  run-app-command-smoke.sh  run-app-smoke.sh  run-app-target-smokes.sh  run-compatibility-core.sh
