[package]
name = "terminal-app"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSAttributedString",
    "NSApplication",
    "NSColor",
    "NSEvent",
    "NSFont",
    "NSGraphics",
    "NSTextInputClient",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSStringDrawing",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "alloc",
    "NSArray",
    "NSAttributedString",
    "NSDictionary",
    "NSNotification",
    "NSObject",
    "NSGeometry",
    "NSRange",
    "NSString",
    "NSTimer",
] }
oslog = "0.2"
terminal-core = { path = "../terminal-core" }
